--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -20,7 +20,7 @@
         android:text="Question?"/>
     <Button
         android:id="@+id/game_activity_button_1"
-        android:layout_width="wrap_content"
+        android:layout_width="256dp"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_margin="8dp"
@@ -30,7 +30,7 @@
         tools:text="Answer 1"/>
     <Button
         android:id="@+id/game_activity_button_2"
-        android:layout_width="wrap_content"
+        android:layout_width="256dp"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_margin="8dp"
@@ -40,7 +40,7 @@
         tools:text="Answer 2"/>
     <Button
         android:id="@+id/game_activity_button_3"
-        android:layout_width="wrap_content"
+        android:layout_width="256dp"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_margin="8dp"
@@ -50,7 +50,7 @@
         tools:text="Answer 3"/>
     <Button
         android:id="@+id/game_activity_button_4"
-        android:layout_width="wrap_content"
+        android:layout_width="256dp"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_margin="8dp"
